# ProofOrPay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json
contracts/: Cargo.toml
contracts/reputation_ledger/: Cargo.toml
contracts/reputation_ledger/src/: lib.rs
contracts/stake_pool/: Cargo.toml
contracts/stake_pool/src/: lib.rs  test.rs
contracts/stake_pool/test_snapshots/test/: test_ai_score_below_threshold.1.json  test_slash_on_missed_deadline.1.json  test_stake_and_release.1.json
docs/: COMMUNITY.md  INDEXING.md  METRICS_EVIDENCE.md  MONITORING.md  PRODUCTION_CHECKLIST.md  PROTOCOL.md  RUNBOOK.md  SECURITY_CHECKLIST.md  TESTNET_EVIDENCE.json  VERIFICATION_MATRIX.md  VERIFIER_KEY.md  testnet-evidence.schema.json
docs/reports/: testnet-verify-sample.json
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/scripts/: bulk-create-pools.mjs  print-keypair.mjs  verify-testnet.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/api/metrics/: route.ts
frontend/src/app/app/: page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/app/pools/: page.tsx
frontend/src/components/: ConfirmPeerForm.tsx  CreatePoolForm.tsx  PoolCard.tsx  SettlePoolButton.tsx  StakeForm.tsx  SubmissionForm.tsx  TxStatus.tsx  WalletConnect.tsx
frontend/src/lib/: ai-verifier.ts  constants.ts  errors.ts  stellar.ts  wallets.ts
frontend/src/types/: pact.ts
scripts/: deploy.sh  invoke-test.sh  snapshot-pools.sh
(+1 files in other folders)
