[package]
name = "stake_pool"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
reputation_ledger = { path = "../reputation_ledger", package = "reputation_ledger" }
